Fix Lecture attendance Problem with Medical issue